Bug 272416 - [svg] WPT test svg/path/property/mpath.svg is a failure
Summary: [svg] WPT test svg/path/property/mpath.svg is a failure
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar
Depends on: 272602 272633
Blocks: 234227 276276
  Show dependency treegraph
 
Reported: 2024-04-09 12:09 PDT by Antoine Quint
Modified: 2024-07-05 17:53 PDT (History)
4 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2024-04-09 12:09:13 PDT
The test svg/path/property/mpath.svg, being added with bug 272414, is a failure.
Comment 1 Antoine Quint 2024-04-12 23:13:38 PDT
Pull request: https://github.com/WebKit/WebKit/pull/27214
Comment 2 EWS 2024-04-13 01:27:01 PDT
Committed 277453@main (5523d8497615): <https://commits.webkit.org/277453@main>

Reviewed commits have been landed. Closing PR #27214 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2024-04-13 01:28:15 PDT
<rdar://problem/126398393>
Comment 4 WebKit Commit Bot 2024-04-13 15:44:52 PDT
Re-opened since this is blocked by bug 272633
Comment 5 Antoine Quint 2024-07-03 09:58:53 PDT
Pull request: https://github.com/WebKit/WebKit/pull/30442
Comment 6 EWS 2024-07-03 22:57:22 PDT
Committed 280657@main (fb1c6b94913f): <https://commits.webkit.org/280657@main>

Reviewed commits have been landed. Closing PR #30442 and removing active labels.