[svg] WPT test svg/path/property/mpath.svg is a failure https://bugs.webkit.org/show_bug.cgi?id=272416

Reviewed by Nikolas Zimmermann.

While we have a mechanism in place to invalidate `<mpath>` elements when its referenced
element has a change in its `d` SVG attribute value, we don't do that for the case where
the `d` value is set via the CSS property.

We now implement `styleDidChange()` in both the legacy and the LBSE renderer for SVG paths
and call into the private `SVGPathElement::invalidateMPathDependencies()` through the new
public method `SVGPathElement::pathDidChange()`.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/svg/RenderSVGPath.cpp:
(WebCore::RenderSVGPath::styleDidChange):
* Source/WebCore/rendering/svg/RenderSVGPath.h:
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.cpp:
(WebCore::LegacyRenderSVGPath::styleDidChange):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGPath.h:
* Source/WebCore/svg/SVGPathElement.cpp:
(WebCore::SVGPathElement::pathDidChange):
* Source/WebCore/svg/SVGPathElement.h:

Canonical link: https://commits.webkit.org/277453@main